<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/leaves_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginStart="@dimen/margin_small_XX"
        android:layout_marginTop="@dimen/margin_small_XX"
        android:layout_marginEnd="@dimen/margin_small_XX"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#33FFFFFF"
            android:gravity="center"
            android:text="@string/transitions"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_animations_button"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/transitions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/transition"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/explode_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/explode"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/transform_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/transform"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pathmotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pathmotion" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small_XX"
            android:gravity="center"
            android:background="#33FFFFFF"
            android:text="@string/animations_fab"
            android:textSize="@dimen/text_size_animations_button"
            android:textAlignment="center"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/animations_fab_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/animations_fab"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small_XX"
            android:gravity="center"
            android:background="#1AFFFFFF"
            android:text="@string/animations_bonus"
            android:textSize="@dimen/text_size_animations_button"
            android:textAlignment="center"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/animations_bonus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/animations_bonus"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>